[package]
name = "lepton"
version = "0.1.0"
authors = ["Josh Matthews <josh@joshmatthews.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simpleservo = { path = "../servo/ports/libsimpleservo/api", features = ["layout-2013", "media-dummy"] }

[patch.crates-io]
# If you need to temporarily test Servo with a local fork of some upstream
# crate, add that here. Use the form:
#
#     <crate> = { path = "/path/to/local/checkout" }
#
# Or for a git dependency:
#
#     [patch."https://github.com/servo/<repository>"]
#     <crate> = { path = "/path/to/local/checkout" }

# This is here to dedupe winapi since mio 0.6 is still using winapi 0.2.
mio = { git = "https://github.com/servo/mio.git", branch = "servo-mio-0.6.22" }

# https://github.com/rust-lang/backtrace-rs/pull/363/
#backtrace = { git = "https://github.com/servo/backtrace-rs", branch = "uwp-fix" }

[patch."https://github.com/jrmuizel/raqote"]
raqote = { git = "https://github.com/jdm/raqote", branch = "fkup" }

# https://github.com/servo/servo/issues/27515#issuecomment-671474054
[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
